--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files
-.env*
-!.env.example
+# .env* # Removed by Orchids to allow .env files
+# !.env.example # Removed by Orchids to allow .env files
 
 # vercel
 .vercel
